--- a/yidong/index.html
+++ b/yidong/index.html
@@ -76,11 +76,12 @@
         </ul>
       </div>
       <div class="user-opt mt-16">
-        <div class="user-tab fazhan">
-          <a href="javascript:;" class="tab-1 active">用户发展</a>
-          <a href="javascript:;" class="tab-2">占有率</a>
-          <a href="javascript:;" class="tab-3">市场竞争</a>
-          <a href="javascript:;" class="tab-4">收益情况</a>
+        <div class="user-tab fazhan rel">
+          <span class="active abs"></span>
+          <a href="javascript:;" data-tab='1' >用户发展</a>
+          <a href="javascript:;" data-tab='2' >占有率</a>
+          <a href="javascript:;" data-tab='3' >市场竞争</a>
+          <a href="javascript:;" data-tab='4' >收益情况</a>
         </div>
         <div class="content-wrap">
           <div data-index='1' class="item-1 content">
@@ -140,10 +141,11 @@
         
       </div>
       <div class="news-opt mt-16">
-        <div class="user-tab news-tab">
-          <a href="javascript:;" class="tab-1 active">今日要闻</a>
-          <a href="javascript:;" class="tab-2">热点聚焦</a>
-          <a href="javascript:;" class="tab-3">员工天地</a>
+        <div class="user-tab news-tab rel">
+          <span class="active abs"></span>
+          <a href="javascript:;" data-tab='1'>今日要闻</a>
+          <a href="javascript:;" data-tab='2'>热点聚焦</a>
+          <a href="javascript:;" data-tab='3'>员工天地</a>
         </div>
         <div class="content-wrap">
           <div data-index='1' class="content itme-1">
