--- a/mi/index.html
+++ b/mi/index.html
@@ -104,12 +104,32 @@
           <li><a href="javascript:;">小米Note</a></li>
         </ul>
         <div class="content">
-          <div class="one" data-index="1">
+          <div class="one content-desc rel">
             <h1 class="title">5.7英寸 2K 高清大屏</h1>
             <h2 class="subtitle">与液晶屏厂商 夏普 / JDI 深度定制，36项屏幕专利</h2>
-            <p class="desc">小米Note 顶配版采用 2K 超高清屏幕，分辨率为 2560x1440，这已经媲美一般 24 英寸电脑显示器的分辨率，是 1080p 分辨率的 1.7 倍之多。为了给顶配版选择一块名副其实的出色屏幕，我们与夏普 / JDI 深度研发定制了这块屏幕，并且就连背光、膜材、液晶等原材料全部采用优质供应商，同时还研发了先进的阳光屏技术、负液晶技术及高色饱技术，配备这些出色的技术，让顶配版这块屏幕几乎成为 5.7 英寸手机屏幕中的旗舰规格。<a href="javascript:;">了解屏幕 ></a></p>
+            <div class="text"><p class="desc">小米Note 顶配版采用 2K 超高清屏幕，分辨率为 2560x1440，这已经媲美一般 24 英寸电脑显示器的分辨率，是 1080p 分辨率的 1.7 倍之多。为了给顶配版选择一块名副其实的出色屏幕，我们与夏普 / JDI 深度研发定制了这块屏幕，并且就连背光、膜材、液晶等原材料全部采用优质供应商，同时还研发了先进的阳光屏技术、负液晶技术及高色饱技术，配备这些出色的技术，让顶配版这块屏幕几乎成为 5.7 英寸手机屏幕中的旗舰规格。<a href="javascript:;">了解屏幕 ></a></p></div>
+            <p class="subdesc">在保证产品技术指标不变的情况下，可能在生产中出现供应商的变化。</p>
+            <ul class="canshu">
+              <li><span>2560x1440</span>超高清屏幕</li>
+              <li><span>95%<em>NTSC</em></span>高色彩饱和度</li>
+              <li><span>515</span>PPI</li>
+              <li><span>1400:1</span>高对比度</li>
+            </ul>
+            <div class="lcdbg abs visited"></div>
           </div>
-          <div class="two" data-index="2"></div>
+          <div class="two content-desc rel">
+            <h1 class="title">5.7 英寸 夏普 / JDI 负液晶全高清屏幕</h1>
+            <h2 class="subtitle">高色彩饱和度 / 1400:1 高对比度 / 像素级动态对比度调整</h2>
+            <div class="text"><p class="desc">屏幕更大，表现也更出色。小米Note 使用了 5.7 英寸 夏普 / JDI 负液晶全高清视网膜屏，将普通屏幕的对比度从 1000:1 提升至 1400:1，当你点亮屏幕的一刻，更丰富的色彩表现力与对比度都将给你出乎意料的惊艳感。此外，小米Note 上首次采用了“像素级动态对比度调整”技术，将屏幕的每一个像素亮度进行独立控制。现在，即使在刺眼的阳光下，你也可以享受清晰的浏览体验。<a href="javascript:;">了解屏幕 ></a></p></div>
+            <p class="subdesc">在保证产品技术指标不变的情况下，可能在生产中出现供应商的变化。</p>
+            <ul class="canshu">
+              <li><span>1080p</span>全高清屏幕</li>
+              <li><span>95%<em>NTSC</em></span>高色彩饱和度</li>
+              <li><span>386</span>PPI</li>
+              <li><span>1400:1</span>高对比度</li>
+            </ul>
+            <div class="lcdbg abs visited"></div>
+          </div>
         </div>
       </div>
     </div>
