--- a/xmy365/index.html
+++ b/xmy365/index.html
@@ -1334,7 +1334,296 @@
           </div>
         </div>
       </div>
-      <div class="specialty"></div>
+      <div class="specialty clearfix">
+        <div class="cq fl">
+          <div class="tablist rel">
+            <a href="javascript:;" class="key1 active">零食</a>
+            <a href="javascript:;" class="key2">糕点</a>
+            <a href="javascript:;" class="key3">牛肉干</a>
+            <a href="javascript:;" class="key4">下饭菜</a>
+            <a href="javascript:;" class="key5">底料</a>
+          </div>
+          <div class="itemWrap">
+            <div class="item item1">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-1-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-1-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-1-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-1-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item2">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-2-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-2-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-2-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-2-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item3">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-3-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-3-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-3-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-3-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item4">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-4-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-4-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-4-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-4-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item5">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-5-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-5-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-5-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/cq-5-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="imported fr">
+          <div class="tablist rel">
+            <a href="javascript:;" class="b2 active key1">水果</a>
+            <a href="javascript:;" class="b3 key2">饮料</a>
+            <a href="javascript:;" class="b1 key3">饼干</a>
+            <a href="javascript:;" class="b1 key4">休闲食品</a>
+            <a href="javascript:;" class="b1 key5">酒水</a>
+            <a href="javascript:;" class="b2 key6">咖啡</a>
+            <a href="javascript:;" class="b3 key7">糖果</a>
+          </div>
+          <div class="itemWrap">
+            <div class="item item1">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-1-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-1-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-1-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-1-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item2">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-2-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-2-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-2-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-2-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item3">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-3-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-3-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-3-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-3-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item4">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-4-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-4-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-4-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-4-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item5">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-5-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-5-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-5-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-5-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item6">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-6-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-6-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-6-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-6-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+            <div class="item item7">
+              <div class="elem1 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-7-1.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem2 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-7-2.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem3 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-7-3.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+              <div class="elem4 elem">
+                <a href="javascript:;" class="showimg"><img src="images/specialty/im-7-4.jpg" alt=""></a>
+                <p class="desc"><a href="javascript:;">[新华干副] 重庆德庄十年火锅底料 300g/袋</a></p>
+                <p class="price">¥8.80<s>¥12.72</s></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="subsidiary-food m-common">
         <div class="title rel fl">
           <span class="category abs">
