--- a/Other/finger-guessing/index.html
+++ b/Other/finger-guessing/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="s3"></section>
   </div>
-  <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+  <script src="js/jquery-2.1.4.js"></script>
   <script src="js/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
