--- a/todojs/index.html
+++ b/todojs/index.html
@@ -11,12 +11,12 @@
     <div class="header">
       <div class="content clearfix">
         <a class="blog-title fl" href="index.html">CodeDreamfy's的前端收藏夹</a>
-        <div class="blog-motto fr"><p>爱自己，就是让自己变得自由</p></div>
+        <div class="blog-motto fr"><p></p></div>
       </div>
     </div>
     <div class="main-wrap clearfix">
       <div class="main fl border">
-        
+        <h1 class="m-tit"></h1>
       </div>
       <div class="sidebar fr border"></div>
     </div>
